# openswitch-governance

./: .coveragerc  .gitreview  CONTRIBUTING.rst  HACKING.rst  README.rst  groups  openhalon-common.conf  project.config  requirements.txt  reviewers.config  setup.cfg  setup.py  tox.ini
doc/: Makefile
doc/source/: conf.py  index.rst  installation.rst  usage.rst
doc/source/governance/: bug-czar.rst  committers.rst  contributor-licensing-agreements.rst  contributor-onboarding.rst  election-process.rst  index.rst  maintainers.rst  project-leader.rst  release-management.rst
openhalon_governance/: __init__.py
openhalon_governance/tests/: test_openhalon-governance.py
