[metadata]
name = openhalon-governance
summary = "OpenHalon Governance"
description-file =
    README.rst
author = OpenHalon
home-page = http://review.openhalon.io/
classifier =
    Environment :: OpenHalon
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    openhalon-governance

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = openhalon-governance/locale
domain = governance

[update_catalog]
domain = governance
output_dir = openhalon-governance/locale
input_file = openhalon-governance/locale/governance.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = openhalon-governance/locale/governance.pot
